#620 - fix horizontal overflow

--- a/src/components/Home/components/Footer/styles.scss
+++ b/src/components/Home/components/Footer/styles.scss
@@ -45,4 +45,8 @@
   max-width: 768px;
   margin: auto;
   padding: 10px;
+
+  >div {
+    display: flex;
+  }
 }
