--- a/src/components/LandingPage/styles.scss
+++ b/src/components/LandingPage/styles.scss
@@ -23,7 +23,7 @@
 }
 
 .midLogo {
-    max-width: 400px;
+    max-width: 350px;
     position: relative;
     top: 15px;
     left: 0;
@@ -39,7 +39,7 @@
 
     hr {
         margin: 30px auto;
-        max-width: 400px;
+        max-width: 350px;
     }
 }
 
